src/components/App/App.scss
$screenWidth: 5120;
$largeFont: 8em;

@font-face {
  font-family: "Pixelated Times New Roman";
  src: url("../../../public/fonts/pixelated-times-new-roman.otf.woff2") format(woff2);
}

@function renderStars($amount, $color) {
  $returnVal: "#{random($screenWidth)}px #{random($screenWidth)}px #{$color}";
  @for $i from 2 through $amount {
    $returnVal: "#{$returnVal} , #{random($screenWidth)}px #{random($screenWidth)}px #{$color}";
  }

  @return unquote($returnVal);
}

$shadows-tiny: renderStars(100, "#00FFCC");
$shadows-small: renderStars(700, "#FF4DFF");
$shadows-medium: renderStars(400, "#A64DFF");
$shadows-big: renderStars(200, "#3A68E8");

p{
  font-size: 22px;
}

h1, .app__main-text{
  background-image: linear-gradient(0deg,rgba(195, 141, 34, 1) 0%, rgba(170, 45, 253, 1) 100%);
  background-clip: text;
  color: transparent;
}

p, h1, div, h2{
  text-align: center;
  text-rendering: optimizeLegibility;
}

*{
  padding: 0px;
  margin: 0px;
}

button:hover {
  cursor: pointer;
}

html {
  height: 100%;
}

body {
  background: rgb(15, 0, 77);
  background: -o-radial-gradient(circle, rgb(3, 0, 17) 0%, rgb(7, 0, 12) 100%);
  background: radial-gradient(circle, rgb(3, 0, 17) 0%, rgb(7, 0, 12) 100%);
  background-attachment: fixed;
  font-family: "Pixelated Times New Roman", Arial, Helvetica;
  color: white;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  overflow: hidden;
  text-rendering: auto;
}

.App {
  -webkit-perspective: 1px;
  perspective: 1px;
  max-width: 1700px;
  padding: 15px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100vh;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: auto;
}

.stars {
  z-index: -1;
  background: transparent;
  position: absolute;
}

.stars1 {
  width: 1px;
  height: 1px;
  -webkit-box-shadow: $shadows-small;
  box-shadow: $shadows-small;
  -webkit-animation: starMove 10s linear infinite;
  animation: starMove 10s linear infinite;
  position: absolute;

  &:after {
    content: " ";
    position: absolute;
    top: 5120px;
    width: 1px;
    height: 1px;
    -webkit-box-shadow: $shadows-small;
    box-shadow: $shadows-small;
  }
}

.stars2 {
  width: 2px;
  height: 2px;
  -webkit-box-shadow: $shadows-medium;
  box-shadow: $shadows-medium;
  -webkit-animation: starMove 15s linear infinite;
  animation: starMove 15s linear infinite;
  position: absolute;

  &:after {
    content: " ";
    position: absolute;
    top: $screenWidth;
    width: 2px;
    height: 2px;

    -webkit-box-shadow: $shadows-medium;

    box-shadow: $shadows-medium;
  }
}

.stars3 {
  width: 3px;
  height: 3px;
  -webkit-box-shadow: $shadows-big;
  box-shadow: $shadows-big;
  -webkit-animation: starMove 20s linear infinite;
  animation: starMove 20s linear infinite;
  position: absolute;

  &:after {
    content: " ";
    position: absolute;
    top: $screenWidth;
    width: 3px;
    height: 3px;
    -webkit-box-shadow: $shadows-big;
    box-shadow: $shadows-big;
  }
}

.stars4 {
  width: 1px;
  height: 1px;
  -webkit-box-shadow: $shadows-tiny;
  box-shadow: $shadows-tiny;
  -webkit-animation: starMove 5s linear infinite;
  animation: starMove 5s linear infinite;
  position: absolute;

  &:after {
    content: " ";
    position: absolute;
    top: $screenWidth;
    width: 3px;
    height: 3px;
    -webkit-box-shadow: $shadows-tiny;
    box-shadow: $shadows-tiny;
  }
}

.app__github-asteroid{
  background: transparent url('../../vendor/icons/github-brands-solid.svg') center no-repeat;
  background-color: #6e5494;
  width: 80px;
  height: 80px;
  position: absolute;
  left: 200px;
  top: 40px;
  animation: floatAround linear infinite 27s;
  border-radius: 80px;
  cursor: pointer;
  border: none;
  z-index: 2;
}

.app__section {
  width: 100%;
  height: 100%;
  margin: auto;
  overflow: visible;
}

.app__main-text {
  font-size: 8em;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  visibility: hidden;
}

.app__main-text_shown {
  visibility: visible;
}

.app__medium-text{
  font-size: $largeFont / 3;
  -webkit-animation: floatAround linear infinite 15s,
  1s ease 6s normal forwards 1 fade;
animation: floatAround linear infinite 15s, 1s ease 6s normal forwards 1 fade;
}

.top {
  -webkit-animation: floatAround linear infinite 65s,
    1s ease 2s normal forwards 1 fade;
  animation: floatAround linear infinite 65s, 1s ease 2s normal forwards 1 fade;
}

.name {
  -webkit-animation: floatAround linear infinite 45s,
    1s ease 3s normal forwards 1 fade;
  animation: floatAround linear infinite 45s, 1s ease 3s normal forwards 1 fade;
}

.occupation1 {
  -webkit-animation: floatAround linear infinite 35s,
    1s ease 4s normal forwards 1 fade;
  animation: floatAround linear infinite 35s, 1s ease 4s normal forwards 1 fade;
}

.occupation2 {
  -webkit-animation: floatAround linear infinite 25s,
    1s ease 6s normal forwards 1 fade;
  animation: floatAround linear infinite 25s, 1s ease 6s normal forwards 1 fade;
}

.app_about-me-container{
  display: flex;
  justify-content: center;
  gap: 40px;
  margin-top: 50px;
}

.app__about-me-text{
  max-width: 50%;
  text-align: center;
  -webkit-animation: floatAround linear infinite 20s,
  1s ease 6s normal forwards 1 fade;
animation: floatAround linear infinite 20s, 1s ease 6s normal forwards 1 fade;
}

.app__widgetsContainer{
  display: grid;
  grid-template-columns: repeat(auto-fit, 280px);
  max-width: 968px;
  gap: 15px;
  margin: auto;
  //overflow-y: scroll;
}

@-webkit-keyframes starMove {
  from {
    -webkit-transform: translateY(0px);
    transform: translateY(0px);
  }
  to {
    -webkit-transform: translateY(-2000px);
    transform: translateY(-2000px);
  }
}

@keyframes starMove {
  from {
    -webkit-transform: translateY(-2000px);
    transform: translateY(-2000px);
  }
  to {
    -webkit-transform: translateY(0px);
    transform: translateY(0px);
  }
}

@-webkit-keyframes floatAround {
  0% {
    -webkit-transform: translateX(0px);
    transform: translateX(0px);
  }
  25% {
    -webkit-transform: translateX(15px) translateY(15px);
    transform: translateX(15px) translateY(15px);
  }
  50% {
    -webkit-transform: translateX(-15px) translateY(-15px);
    transform: translateX(-15px) translateY(-15px);
  }
  75% {
    -webkit-transform: translateX(15px) translateY(-15px);
    transform: translateX(15px) translateY(-15px);
  }
  100% {
    -webkit-transform: translateX(0px) translateY(0px);
    transform: translateX(0px) translateY(0px);
  }
}

@keyframes floatAround {
  0% {
    -webkit-transform: translateX(0px);
    transform: translateX(0px);
  }
  25% {
    -webkit-transform: translateX(15px) translateY(15px);
    transform: translateX(15px) translateY(15px);
  }
  50% {
    -webkit-transform: translateX(-15px) translateY(-15px);
    transform: translateX(-15px) translateY(-15px);
  }
  75% {
    -webkit-transform: translateX(15px) translateY(-15px);
    transform: translateX(15px) translateY(-15px);
  }
  100% {
    -webkit-transform: translateX(0px) translateY(0px);
    transform: translateX(0px) translateY(0px);
  }
}

@keyframes fade {
  0% {
    opacity: 0;
  }
  66% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-webkit-keyframes fade {
  0% {
    opacity: 0;
  }
  66% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

